# vicinae

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  config.toml  logs  package-lock.json  resources.qrc  todos.txt
calculator/: CMakeLists.txt  Makefile  examples.txt
calculator/src/: ast.cpp  calculator.hpp  main.cpp  output.cpp  parser.cpp  tokenizer.cpp  unit.cpp
daemon/: CMakeLists.txt  LICENSE  README.md  config.toml  icons.qrc  resources.qrc
daemon/include/: builtin_icon.hpp  chat-widget.hpp  command-server.hpp  create-quicklink-command.hpp  emoji-command.hpp  favicon-fetcher.hpp  icon-browser-command.hpp  image-fetcher.hpp  image-viewer.hpp  json-patch.hpp  manage-processes-command.hpp  markdown-renderer.hpp  ollama-command.hpp  ollama-service.hpp  omni-icon.hpp  process-manager-service.hpp  quicklink-actions.hpp  remote-image-viewer.hpp
daemon/include/extend/: action-model.hpp  detail-model.hpp  empty-view-model.hpp  extension-command.hpp  extension-detail-view.hpp  extension-list-controller.hpp  extension-view.hpp  list-model.hpp  list-view.hpp  metadata-model.hpp  model-parser.hpp
daemon/include/ui/: calculator-list-item-widget.hpp  custom-list-view.hpp  ellided-label.hpp  emoji-viewer.hpp  empty-view.hpp  form.hpp  grid-item-content-widget.hpp  (+21 more)
daemon/src/: actions.hpp  app-database.hpp  app.cpp  app.hpp  block-device-service.hpp  builtin_icon.cpp  calculator-database.hpp  calculator-history-command.hpp  clipboard-service.hpp  command-database.cpp  command-database.hpp  command-object.cpp  command-object.hpp  command.hpp  common.hpp  config.cpp  config.hpp  exchange-rate-service.hpp  extension-list.hpp  extension-view.hpp  extension.hpp  extension_manager.cpp  extension_manager.hpp  extension_object.hpp  files-command.hpp  filesystem-database.hpp  grid-view.hpp  icon-cache-service.hpp  icon-cache-service.ts  index-command.hpp  indexer-service.hpp  ini.hpp  json-patch.cpp  main.cpp  main.cpporig  manage-quicklinks-command.hpp  markdown-view.hpp  navigation-list-view.hpp  old-root.cpp  omnicast.hpp  (+10 more)
libtrie/: CMakeLists.txt  main.cpp  tokenize.hpp  trie.hpp
omnicast/: CMakeLists.txt  browse-fonts-view.hpp  icons.qrc  resources.qrc
omnicast/assets/: extension-runtime.js
omnicast/icons/: icons.qrc
omnicast/include/: app-root-provider.hpp  app-service.hpp  argument.hpp  ask-ai-command.hpp  base-view.hpp  bookmark-actions.hpp  bookmark-service.hpp  builtin_icon.hpp  clipboard-actions.hpp  clipboard-history-command.hpp  clipboard-history-view.hpp  clipboard-manager.hpp  clipboard-service.hpp  command-actions.hpp  command-builder.hpp  command-database.hpp  command-root-provider.hpp  command-server.hpp  common-actions.hpp  config-service.hpp  configure-ai-providers-command.hpp  create-quicklink-command.hpp  edit-command-preferences-view.hpp  emoji-command.hpp  emoji-database.hpp  favicon-fetcher.hpp  favicon-service.hpp  font-service.hpp  get-wayland-wlr-data-control-client-protocol.hpp  icon-browser-command.hpp  image-fetcher.hpp  image-viewer.hpp  json-patch.hpp  local-storage-service.hpp  manage-fallback-commands.hpp  manage-processes-command.hpp  manage-themes-command.hpp  markdown-renderer.hpp  network-manager.hpp  ollama-config-view.hpp  (+20 more)
omnicast/src/: app-database.cpp  app-database.hpp  app.cpp  app.hpp  builtin_icon.cpp  calculator-database.hpp  calculator-history-command.hpp  clipboard-service.cpp  color-formatter.cpp  color-formatter.hpp  command-actions.cpp  command-controller.cpp  command-controller.hpp  command-database.cpp  command.hpp  common.hpp  emoji-list.cpp  extension_manager.hpp  filesystem-database.hpp  get-wayland-wlr-data-control-client-protocol.cpp  global-bar.cpp  global-bar.hpp  header.cpp  header.hpp  image-fetcher.hpp  indexer-service.hpp  ipc-command-handler.cpp  ipc-command-handler.hpp  ipc-command-server.hpp  json-patch.cpp  launcher-window.cpp  launcher-window.hpp  local-storage.cpp  main.cpp  manage-quicklinks-command.hpp  navigation-controller.cpp  navigation-controller.hpp  omnicast.cpp  omnicast.hpp  quicklink-seeder.hpp  (+13 more)
omnictl/: CMakeLists.txt  client.hpp  command.cpp  command.hpp  main.cpp  table.hpp
proto/: CMakeLists.txt  main.cpp  marshal.cpp  proto.cpp  proto.hpp
proto/extensions/: clipboard.proto  common.proto  daemon.proto  extension.proto  ipc.proto  oauth.proto  ui.proto  wlr-clipboard.proto
vicinae/: CMakeLists.txt  README.md  browse-fonts-view.hpp  contribs.qrc  resources.qrc.in
vicinae/icons/: icons.qrc
vicinae/include/: base-view.hpp  builtin_icon.hpp  clipboard-actions.hpp  clipboard-history-view.hpp  command-builder.hpp  command-database.hpp  common-actions.hpp  create-quicklink-command.hpp  edit-command-preferences-view.hpp  emoji-command.hpp  font-service.hpp  icon-browser-command.hpp  manage-fallback-commands.hpp  manage-processes-command.hpp  manage-themes-command.hpp  omni-command-db.hpp  omni-database.hpp  omni-icon.hpp  open-configuration-file-command.hpp  preference.hpp  search-files-view.hpp  switch-windows-command.hpp  switch-windows-view.hpp  text-file-viewer.hpp  theme.hpp  timer.hpp
vicinae/src/: app.cpp  builtin-url-command.hpp  builtin_icon.cpp  calculator-history-command.hpp  command-controller.cpp  command-controller.hpp  command-database.cpp  command.hpp  common.hpp  extension-error-view.hpp  font-service.cpp  global-bar.cpp  header.cpp  image-fetcher.hpp  ipc-command-handler.cpp  ipc-command-handler.hpp  ipc-command-server.cpp  ipc-command-server.hpp  launcher-window.cpp  main.cpp  manage-quicklinks-command.hpp  navigation-controller.cpp  navigation-controller.hpp  raycast-store-view.hpp  root-command.hpp  root-extension-manager.hpp  root-search.cpp  root-search.hpp  service-registry.cpp  service-registry.hpp  single-view-command-context.hpp  theme.cpp  vicinae.cpp  vicinae.hpp
wlr-clip/: CMakeLists.txt
wlr-clip/include/: data-control-client.hpp  display.hpp  registry.hpp  seat.hpp  utils.hpp
wlr-clip/src/: data-control-client.cpp  display.cpp  main.cpp  registry.cpp  seat.cpp  utils.cpp
wlr-clipman/: CMakeLists.txt
wlr-clipman/src/: main.cpp
(+1102 files in other folders)
